Spacing fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -82,7 +82,7 @@ $orange: #df7366;
 
 .wrapper.style1 {
     padding-top: 0;
-    margin-bottom: 0;
+    //margin-bottom: 0;
   }
 
 .image-stripe {
@@ -96,6 +96,17 @@ $orange: #df7366;
     padding: 18%;
     color: white;
   }
+}
+
+.img-footer {
+  display: block;
+  font-size: 1.5em;
+  margin: 1em 0 2em 0;
+  line-height: 1.5em;
+  text-align: inherit;
+  margin-top:25px;
+  margin-bottom:0px;
+  padding-top:25px
 }
 
 .image.featured{
